# mcp

./: .gitignore  AGENTS.md  CONTRACT_DEFECT.md  LICENSE  Makefile  README.md  flake.nix  hatch_build.py  pyproject.toml  renovate.json5
.github/workflows/: ci.yml  notify-nix-config.yml
contract/: PINNED.json
nix/: module.nix  package.nix
scripts/: conformance-ci.sh  pull-contract.sh  verify-served-contract.sh
src/homelab_mcp/: __init__.py  __main__.py  app.py  arcraiders_state.py  auth.py  buildinfo.py  config.py  contract.py  oauth_provider.py  oauth_state.py  signing_key.py
src/homelab_mcp/tools/: __init__.py  _http.py  _registry.py  arcraiders.py  cooklang.py  gatus.py  grocy.py  ha.py  replog.py
tests/: test_app.py  test_auth.py  test_config.py  test_contract.py  test_oauth_flow.py  test_oauth_security.py  test_oauth_state_sqlite.py  test_tool_annotations.py  test_tools_arcraiders.py  test_tools_cooklang.py  test_tools_gatus.py  test_tools_grocy.py  test_tools_ha.py  test_tools_replog.py
