[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "homelab-mcp"
version = "0.10.2"
description = "Homelab MCP server: cooklang + gatus tools exposed via Model Context Protocol"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Ryan Holt" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    # Core MCP transport. streamable-http transport requires >= 1.10.
    # Cap below 2.0 so an unrelated major (with breaking API changes) can't
    # float in and redline CI on a routine dependency resolution.
    "mcp>=1.10,<2",
    "starlette>=0.41",
    "uvicorn[standard]>=0.32",
    # HTTP client for upstream APIs (cooklang, federation, gatus) AND
    # for the OAuth federation flow that talks to PocketID's token
    # endpoint server-to-server.
    "httpx>=0.27",
    # OAuth 2.1 authorization server. We use authlib's primitives
    # (AuthorizationServer, AuthorizationCodeGrant) + its JOSE library
    # for RS256 JWT issuance and verification.
    "authlib>=1.6",
    # JWT validation library, kept for the verifier path.
    "pyjwt[crypto]>=2.10",
    "cryptography>=43",
    # Config / env handling.
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
]

[project.scripts]
homelab-mcp = "homelab_mcp.app:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.34",
]

[project.urls]
Homepage = "https://github.com/carpenike/mcp"
Issues = "https://github.com/carpenike/mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/homelab_mcp"]

# Fetch-at-build: GitHub is the single source of truth for the
# pocketid-mcp-as contract. hatch_build.py pulls contract.json + CONTRACT.md
# from the ref pinned in contract/PINNED.json and force-includes them into
# the wheel as homelab_mcp/_vendored/, so the installed package serves the
# contract with no runtime GitHub dependency and the source tree carries no
# committed copy. Refresh the pin with `make contract-pull`.
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.editable.hooks.custom]
path = "hatch_build.py"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "N",     # pep8-naming
    "ASYNC", # flake8-async
    "S",     # bandit (security)
    "SIM",   # simplifications
]
ignore = [
    "S101", # asserts ok in tests
    "E501", # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "N802"]
# S105 false-positives — these are OAuth-spec identifier strings, not credentials.
"src/homelab_mcp/oauth_provider.py" = ["S105"]
"src/homelab_mcp/oauth_state.py" = ["S105"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# The MCP SDK doesn't ship complete type stubs yet.
module = ["mcp.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Authlib doesn't ship type stubs.
module = ["authlib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-ra", "--strict-markers"]
